# NeuralStyleTransfer

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
neural_style_transfer/: app.py  config.py  stt.py  styletransfer.py
notebook/: StyleTransfer.ipynb  StyleTransfer_Annotated.ipynb  requirements.txt
